--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Zheng Long | Portfolio</title>
+  <title>Vincent Tuang | Digital Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Zheng Long</a>
+    <a class="navbar-brand" href="#">Vincent Tuang</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,6 +21,7 @@
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
         <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
         <li class="nav-item"><a class="nav-link" href="#resume">Resume</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
@@ -27,45 +29,46 @@
   </div>
 </nav>
 
-<!-- Hero -->
+<!-- Main page -->
 <header class="bg-secondary text-white text-center py-5">
   <div class="container">
-    <h1>Hello, I'm Zheng Long</h1>
-    <p class="lead">Diploma in Infocomm & Security | Exploring Cybersecurity & Web Development</p>
+    <h1>Vincent Tuang</h1>
+    <p class="lead">Diploma in Infocomm & Security</p>
     <a href="#projects" class="btn btn-outline-light">View My Work</a>
   </div>
 </header>
 
 <!-- About -->
 <section id="about" class="container py-5">
-  <h2>About Me</h2>
-  <p>
-    I'm a Year 2 student at Nanyang Polytechnic, currently pursuing a Diploma in Infocomm & Security. I’m still exploring different areas in tech — from cybersecurity to web development — and I’m open to learning more as I gain experience through school and internships.
-  </p>
+    <div class="text-center"><h2>About Me</h2></div>  
+    <p>
+        I’m currently a Year 2 student pursuing a Diploma in Infocomm & Security at Nanyang Polytechnic. While I’m still exploring where my strengths and interests lie in the tech field, I’ve gained exposure to areas like cybersecurity, networking, and web development through my coursework.
+    <br>
+        I enjoy learning how different systems and technologies work together, and I’m open to discovering which path suits me best — whether in security, infrastructure, or software development. As I continue my studies and internships, I hope to gain more practical experience and better understand the kind of work I’d like to pursue in the future.
+    </p>
 </section>
 
 <!-- Skills -->
 <section id="skills" class="bg-light py-5">
   <div class="container">
-    <h2>Skills</h2>
+    <div class="text-center"><h2>Skills</h2></div>
     <ul>
-      <li><strong>Programming:</strong> Python, C#, SQL, HTML/CSS</li>
-      <li><strong>Tools:</strong> Git, Wireshark, Linux, Packet Tracer</li>
-      <li><strong>Concepts:</strong> OSI/TCP-IP, XSS/SQL Injection Basics</li>
-      <li><strong>Soft Skills:</strong> Communication, Teamwork, Problem-Solving</li>
+      <li><strong>Programming:</strong> Python, HTML/CSS, SQL</li>
+      <li><strong>Tools:</strong> Github, Linux, Cisco Packet Tracer</li>
+      <li><strong>Concepts:</strong> OSI/TCP-IP, IP Addressing & Subnetting, VLANs & LAN/WAN basics</li>
+      <li><strong>Soft Skills:</strong> Communication, Teamwork, Adaptable, Willing to Learn</li>
     </ul>
   </div>
 </section>
 
 <!-- Projects -->
 <section id="projects" class="container py-5">
-  <h2>Projects</h2>
+  <div class="text-center"><h2>Projects</h2></div>
   <div class="row">
     <div class="col-md-6">
       <h5>Secure Login System</h5>
       <p>A Flask-based login system using hashed passwords and basic XSS protection.</p>
       <small><strong>Tools:</strong> Python, Flask, HTML/CSS</small><br>
-      <a href="#" target="_blank">GitHub Repo</a>
     </div>
     <div class="col-md-6">
       <h5>Network Topology Simulation</h5>
@@ -75,26 +78,55 @@
   </div>
 </section>
 
+<!-- Certificates -->
+<section id="certificates" class="bg-light py-5">
+  <div class="container text-center">
+    <h2>Certifications</h2>
+
+    <div class="cert-wrapper d-flex flex-wrap justify-content-center gap-4 mt-4">
+
+      <!-- 1st cert -->
+      <div class="cert-box">
+        <h5>Web Development Fundamentals</h5>
+        <p>Issued by IBM SkillsBuild (2024)</p>
+        <a href="certificates/Screenshot 2025-07-11 201226.png" target="_blank">
+            <img src="certificates/Screenshot 2025-07-11 201226.png" alt="IBM Certificate">
+        </a>
+      </div>
+
+      <div class="cert-box">
+        <h5>Cybersecurity Fundamentals</h5>
+        <p>Issued by IBM SkillsBuild (2024)</p>
+        <a href="certificates/Screenshot 2025-07-11 200840.png" target="_blank">
+            <img src="certificates/Screenshot 2025-07-11 200840.png" alt="IBM Certificate">
+        </a>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
 <!-- Resume -->
 <section id="resume" class="bg-light py-5 text-center">
   <div class="container">
     <h2>Resume</h2>
-    <p>You can download my resume using the link below.</p>
-    <a href="resume.pdf" class="btn btn-primary" target="_blank">Download Resume (PDF)</a>
+    <p>You can download my resume by clicking the button below.</p>
+    <a href="resume/Vincent Tuang.pdf" class="btn btn-primary" target="_blank">Download Resume (PDF)</a>
   </div>
 </section>
 
 <!-- Contact -->
 <section id="contact" class="container py-5">
   <h2>Contact Me</h2>
-  <p>Email: yourname@email.com</p>
-  <p>LinkedIn: <a href="#">linkedin.com/in/yourprofile</a></p>
-  <p>GitHub: <a href="#">github.com/yourusername</a></p>
+  <p>Email: vincitive@gmail.com</p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/vincent-tuang-3b0756351/" target="_blank">linkedin.com/in/vincent-tuang-3b0756351/</a></p>
+  <p>GitHub: <a href="#" target="_blank">github.com/</a></p>
 </section>
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3">
-  © 2025 Zheng Long | All rights reserved
+  © 2025 Vincent Tuang | All rights reserved
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
