--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- Soft Skills -->
       <div class="col-md-12 mt-3">
-        <h4 class="fw-bold">Concepts</h4>
+        <h4 class="fw-bold">Soft Skills</h4>
         <div class="d-flex flex-wrap gap-3">
           <div class="skill-item"><span class="dot"></span> Communication</div>
           <div class="skill-item"><span class="dot"></span> Teamwork</div>
